--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -97,7 +97,7 @@ address = {street = "526 North Campus Road 314 Weill Hall", city = "Ithaca", reg
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
-coordinates = {latitude = "42.453639184045386", longitude = "-122.1697"} , -76.4735027
+coordinates = {latitude = "42.453639184045386", longitude = "-76.4735027"}
 
 # Directions for visitors to locate you.
 directions = ""
@@ -112,7 +112,7 @@ appointment_url = ""
 # Contact links
 #   Set to `[]` to disable, or comment out unwanted lines with a hash `#`.
 contact_links = [
-  {icon = "twitter", icon_pack = "fab", name = "Follow Me", link = "https://twitter.com/ShaunTCross"},
+  {icon = "twitter", icon_pack = "fab", name = "Follow Me", link = "https://twitter.com/ShaunTCross"} #,
   #{icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:echo123?call"},
   #{icon = "keybase", icon_pack = "fab", name = "Chat on Keybase", link = "https://keybase.io/"},
   #{icon = "comments", icon_pack = "fas", name = "Discuss on Forum", link = "https://discourse.gohugo.io"},
